remove position fixed from body on collapse

--- a/resources/scss/ceres/common/_structure.scss
+++ b/resources/scss/ceres/common/_structure.scss
@@ -2,12 +2,6 @@ body {
 
 	background-color: $gray-lightest;
 
-	@include media-breakpoint-down(sm) {
-		&.position-fixed {
-			position: fixed;
-		}
-	}
-
 	> #vue-app,
 	> #vue-error {
 
